--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@types/lodash": "^4.17.7",
     "autoprefixer": "^10.4.19",
+    "firebase": "^11.0.1",
+    "firebase-tools": "^13.23.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
